# realrent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  render.yaml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260425_0001_initial_schema.py  20260426_0002_add_sale_rent_type.py
backend/app/: config.py  main.py
backend/app/api/routes/: admin_ingestion.py  compare.py  regions.py  summaries.py  transactions.py  trends.py
backend/app/ingestion/: __init__.py  aggregator.py  cli.py  molit_client.py  nationwide_admin.py  normalizer.py  runner.py  xml_parser.py
backend/app/models/: __init__.py  data_sync_job.py  enums.py  monthly_region_summary.py  region.py  rental_transaction.py
backend/app/schemas/: compare.py  region.py  summary.py  transaction.py  trend.py
backend/app/services/: compare_service.py  region_search_service.py  summary_service.py  transaction_query_service.py  trend_service.py
backend/tests/: conftest.py  test_admin_ingestion_api.py  test_alembic.py  test_compare_api.py  test_compare_service.py  test_config.py  test_cors.py  test_health.py  test_initial_migration_postgres_enums.py  test_models.py  test_region_search_service.py  test_regions_api.py  test_summaries_api.py  test_transactions_api.py  test_trends_api.py
backend/tests/ingestion/: test_aggregator.py  test_molit_client.py  test_nationwide_admin.py  test_normalizer.py  test_runner.py  test_xml_parser.py
docs/plans/: realrent-mvp-plan.md
frontend/: index.html  package-lock.json  package.json  vercel.json
(+42 files in other folders)
